# AxionBloch

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
axionbloch/: Apparatus.py  AxionStream.py  AxionWind.py  DataAnalysis.py  Sample.py  SimuTools.py  SimuTypes.py  __init__.py  enphylope.py  station.py  utils.py
blochSimulation_c_ext/: __init__.py  bloch.h  bloch_wrapper.cpp
blochSimulation_ext/: __init__.py  bloch.cpp  bloch.h  bloch_wrapper.cpp
docs/: api.md  api.rst  conf.py  index.md  index.rst  requirements.txt  theory.md  usage.md
examples/: CPMG.py  RF-CW-or-Pulse.py  RF-CW.py  RF-pulse.py  SpinEcho(CPMG).py  benchmark.py  coh.py  coherence_time.py  coherence_time_ifft.py  efficiency_comparison.py  matplotlib_example.py  stoch-axion.py  stochastic-axionlike-particle.py
src/: Apparatus.py  AxionWind.py  DataAnalysis.py  Sample.py  SimuTools.py  SimuTypes.py  utils.py
tests/: long-term-stability-SpinEcho(CPMG).py  test_axions.py
