[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11>=2.10",
]
build-backend = "setuptools.build_meta"

[project]
name = "axionbloch"
version = "0.1.0"
description = "Simulation tool for axion-induced spin dynamics."
authors = [
    { name = "Yuzhe Zhang", email = "yuhzhang@uni-mainz.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    # see docs/requirements.txt)
]

[tool.setuptools]
zip-safe = false
